# My_orion

./: .gitignore  README.md  ros-humble-moveit-task-constructor-core_0.1.3-1jammy.20260219.061210_amd64.deb
cursor_chat/: 2026-03-20_cable_seg_scene警告修复.md  2026-03-20_executePickSolution诊断与代码状态.md  2026-03-20_handlePick死锁修复.md  2026-03-23_git回归handlePick恢复IK.md  2026-03-23_git回退到5d52666.md  2026-03-23_grasp_IK全失败与pregrasp统计说明.md  2026-03-23_handlePick_IK种子与模型系对齐.md  2026-03-23_handlePick侧抓统计pick_side_summary.md  2026-03-23_handlePick预检改为TCP距离.md  2026-03-23_launch重命名为pick_holoocean.md  2026-03-23_max_reach与RViz差异.md  2026-03-23_max_reach运动学自动与余量.md  2026-03-23_open_gripper清除持物态.md  2026-03-23_pick_params写入URDF计算值.md  2026-03-23_pick日志lift与grip.md  2026-03-23_七层架构重构orion_mtc.md  2026-03-23_侧向接近法向符号approach_normal_sign.md  2026-03-23_侧抓IK与RViz对齐.md  2026-03-23_侧抓roll候选扩展.md  2026-03-23_前端急停回ready_rosbridge_advertise.md  2026-03-23_单候选API与预检标签.md  2026-03-23_双模式抓取deterministic_robust.md  2026-03-23_合并orion_mtc配置与yaml说明.md  2026-03-23_夹不到不重试回ready.md  2026-03-23_工作总结19-20-23.md  2026-03-23_急停与回ready话题.md  2026-03-23_急停回ready用Trigger服务.md  2026-03-23_急停回ready移到右侧任务.md  2026-03-23_测试结论pick_side_summary.md  2026-03-23_移除多候选循环.md  2026-03-23_移除抬升阶段与参数.md  2026-03-23_移除放置与冗余清理README.md  2026-03-23_移除放置能力与前后端清理.md  2026-03-23_预检规划多候选夹紧单轮.md  2026-03-24_HoloOcean重启TF时间戳.md  2026-03-24_README更新.md  2026-03-24_RGB轴向与机械臂前方.md  2026-03-24_Rrv_Rvr四元数更新.md  2026-03-24_URDF更新feasibility可达距离.md  (+43 more)
install/orion_moveit_config/share/orion_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/orion_moveit_config/share/orion_moveit_config/cmake/: orion_moveit_configConfig-version.cmake  orion_moveit_configConfig.cmake
install/orion_moveit_config/share/orion_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  orion.srdf  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml
install/orion_moveit_config/share/orion_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/orion_moveit_config/share/orion_moveit_config/launch/: demo.launch.py
src/orion_joy_arm_bridge/: package.xml  setup.cfg  setup.py
src/orion_joy_arm_bridge/config/: joy_manipulator.yaml
src/orion_joy_arm_bridge/launch/: joy_manipulator.launch.py
src/orion_joy_arm_bridge/orion_joy_arm_bridge/: joy_manipulator_node.py
src/orion_mtc/: CMakeLists.txt  package.xml
src/orion_mtc/config/: orion_mtc_params.yaml  pick_params.yaml  pick_place_params.yaml  runtime_policy.yaml
src/orion_mtc/include/orion_mtc/app/: orion_mtc_node.hpp
src/orion_mtc/include/orion_mtc/config/: mtc_config.hpp  runtime_policy.hpp  runtime_policy_loader.hpp
src/orion_mtc/include/orion_mtc/core/: cable_pick_fail_reason.hpp  constants.hpp  held_object.hpp  job_result_code.hpp  manipulation_job.hpp  place_types.hpp  runtime_status.hpp  target_object.hpp  task_state.hpp
src/orion_mtc/include/orion_mtc/decision/: cable_side_pick_precheck.hpp  cylinder_side_grasp.hpp  feasibility_checker.hpp  reach_kinematics.hpp  target_selector.hpp
src/orion_mtc/include/orion_mtc/execution/: solution_executor.hpp  trajectory_executor.hpp
src/orion_mtc/include/orion_mtc/feasibility/: feasibility_checker.hpp
src/orion_mtc/include/orion_mtc/interface/: manipulator_ros_interface.hpp
src/orion_mtc/include/orion_mtc/orchestration/: job_deduplicator.hpp  manipulation_state_machine.hpp  recovery_actions.hpp  task_manager.hpp  task_queue.hpp
src/orion_mtc/include/orion_mtc/perception/: grasp_generator.hpp  perception_snapshot.hpp  perception_snapshot_provider.hpp  pose_cache.hpp  target_cache.hpp  target_selector.hpp  vector3_cache.hpp
src/orion_mtc/include/orion_mtc/planning/: cable_segments.hpp  cable_side_grasp.hpp  collision_object_utils.hpp  pick_task_builder.hpp  place_generator.hpp  place_release_task_builder.hpp  place_task_builder.hpp
src/orion_mtc/include/orion_mtc/scene/: planning_scene_manager.hpp
src/orion_mtc/include/orion_mtc/strategy/: cylinder_side_grasp.hpp
src/orion_mtc/launch/: keypoint_arm_tf.launch.py  pick_holoocean.launch.py  pick_place_demo.launch.py  pick_place_holoocean.launch.py  pick_place_pybullet.launch.py
src/orion_mtc/scripts/: test_pick_then_place.sh
src/orion_mtc/src/: keypoint_to_arm_tf_node.cpp  main.cpp  mtc_node.cpp
src/orion_mtc/src/app/: orion_mtc_node.cpp
src/orion_mtc/src/config/: mtc_config.cpp  runtime_policy_loader.cpp
src/orion_mtc/src/core/: constants.cpp
src/orion_mtc/src/decision/: cable_side_pick_precheck.cpp  cylinder_side_grasp.cpp  feasibility_checker.cpp  reach_kinematics.cpp  target_selector.cpp
src/orion_mtc/src/execution/: solution_executor.cpp  trajectory_executor.cpp
src/orion_mtc/src/feasibility/: feasibility_checker.cpp
src/orion_mtc/src/interface/: manipulator_ros_interface.cpp
src/orion_mtc/src/orchestration/: job_deduplicator.cpp  recovery_actions.cpp  task_manager.cpp  task_queue.cpp
src/orion_mtc/src/perception/: grasp_generator.cpp  perception_snapshot_provider.cpp  pose_cache.cpp  target_cache.cpp  target_selector.cpp  vector3_cache.cpp
src/orion_mtc/src/planning/: cable_segments.cpp  cable_side_grasp.cpp  collision_object_utils.cpp  pick_task_builder.cpp  place_generator.cpp  place_release_task_builder.cpp  place_task_builder.cpp
src/orion_mtc/src/scene/: planning_scene_manager.cpp
src/orion_mtc/src/strategy/: cylinder_side_grasp.cpp
src/orion_mtc_msgs/: CMakeLists.txt  package.xml
src/orion_mtc_msgs/action/: Pick.action  Place.action  PlaceRelease.action
src/orion_mtc_msgs/msg/: DiagnosticItem.msg  HeldObjectState.msg  JobEvent.msg  JobExecutionRecord.msg  Keypoints.msg  PerceptionState.msg  RecoveryEvent.msg  RuntimeStatus.msg  TargetSet.msg  TaskStage.msg
src/orion_mtc_msgs/srv/: CancelJob.srv  CheckPick.srv  CheckPlace.srv  GetQueueState.srv  GetRecentJobs.srv  GetRobotState.srv  ResetHeldObject.srv  SubmitJob.srv  SyncHeldObject.srv
web/: start.sh  (+2 more)
(+133 files in other folders)
