<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orion_joy_arm_bridge</name>
  <version>0.0.1</version>
  <description>Dual Joy 手柄桥接：自动 pick_trigger / 夹爪服务；手动 6 轴速度 jog + 夹爪开合（FollowJointTrajectory）。</description>
  <maintainer email="user@example.com">Orion</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
