cmake_minimum_required(VERSION 3.8)
project(orion_mtc_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(action_msgs REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/JobExecutionRecord.msg"
  "msg/TargetSet.msg"
  "action/Pick.action"
  "action/Place.action"
  "action/PlaceRelease.action"
  "srv/GetRobotState.srv"
  "srv/GetQueueState.srv"
  "srv/GetRecentJobs.srv"
  "srv/CancelJob.srv"
  "srv/ResetHeldObject.srv"
  "srv/SubmitJob.srv"
  "srv/SyncHeldObject.srv"
  DEPENDENCIES geometry_msgs action_msgs std_msgs
)

ament_package()
